Fix mobile to tablet section header padding: Remove left to right padding on tablet and above, add back for mobile

--- a/style.scss
+++ b/style.scss
@@ -65,9 +65,6 @@ body {
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
   }
-  section > :first-child {
-    padding: 1rem 0 0.5rem 0;
-  }
 }
 
 header, main {
@@ -93,7 +90,7 @@ h1 {
 
 h2 {
   font-size: 0.75rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 p {
@@ -114,6 +111,7 @@ ul {
 
 time {
   font-size: 0.75rem;
+  font-weight: 600;
   line-height: 1.5;
   text-align: center;
 }
@@ -169,10 +167,14 @@ header#main-header {
     border-radius: 0.5rem;
     margin: auto;
   }
+  & h1 {
+    display: inline-flex;
+  }
   & h1::after {
     content: "1";
     display: inline-flex;
-    background-color: var(--light-gray);
+    background-color: var(--blue);
+    color: var(--offwhite);
     font-weight: 700;
     align-items: center;
     justify-content: center;
@@ -194,11 +196,16 @@ footer {
   align-self: end;
 }
 
-@include responsize("mobile") {
+section > :first-child {
+  padding: 1rem 1rem 0.5rem 1rem;
+}
+
+@include responsize("tablet"){
   section > :first-child {
-    padding: 1rem 1rem 0.5rem 1rem;
+    padding: 1rem 0 0.5rem 0;
   }
 }
+
 
 /*-- Add .list-resize transition to <main> onClick --*/ 
 
@@ -415,8 +422,8 @@ time.email__datetime::before {
 }
 
 .home__pinned time.email__datetime {
-  background-color: var(--light-gray);
-  border: 1px solid var(--light-gray);
+  background-color: var(--lightest-gray);
+  border: 1px solid var(--lightest-gray);
 }
 
 .home__list time.email__datetime {
@@ -456,6 +463,7 @@ time.email__datetime::before {
     z-index: 1;
     opacity: 0;
     color: transparent;
+    cursor: pointer;
   }
 }
 
@@ -521,7 +529,7 @@ time.email__datetime::before {
 nav#primary-nav, header#main-header {
   height: 48px;
   align-items: start;
-  & > *:not(#close-btn, #search) {
+  & > *:not(#close-btn, #search, .nav__links) {
     align-items: center;
     margin: auto;
   }
@@ -574,10 +582,11 @@ nav#primary-nav .nav__container {
     margin: 1rem 0 1rem 2rem;
   }
   nav#primary-nav ul.nav__links {
-    position: relative;
+    position: fixed;
     z-index: auto;
     width: auto;
     margin-left: 2rem;
+    // flex-flow: row nowrap;
   }
   nav#primary-nav .nav__container {
     display: none;
